[project]
name = "parrainage"
version = "0.1.0"
description = "we creating matching with former and new internationals students"
authors = [
    {name = "TchappiR",email = "tchappiromaric@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
